--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "eslint": "^6.2.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.0",
     "file-loader": "^4.2.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.3",
